--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,13 @@ idna==3.4
 importlib-metadata==6.7.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
-modal-client==0.49.2471
+modal==0.49.2504
+modal-client==0.49.2504
 multidict==6.0.4
 openai==0.27.8
 protobuf==4.23.3
 pydantic==1.10.9
 Pygments==2.15.1
-python-dotenv==1.0.0
 regex==2023.6.3
 requests==2.31.0
 rich==13.4.2
@@ -41,7 +41,7 @@ tqdm==4.65.0
 typer==0.9.0
 types-certifi==2021.10.8.3
 types-toml==0.10.8.6
-typing-extensions==4.6.3
+typing_extensions==4.6.3
 urllib3==2.0.3
 watchfiles==0.19.0
 yarl==1.9.2
